# gen-ai-hands-on

./: .gitignore
call-center/: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-build.sh  hands-on.md  prompt_examples.yaml  pyproject.toml
call-center/complete/: app.py  prompt_examples.yaml
call-center/media/: 3_Inquiries_related_to_premium_surcharge_calculation.txt  premium_inquiry_transcript.txt
call-center/utils/: __init__.py  bedrock.py
fsi-regulation/: .env.example  Dockerfile  README.md  admin.py  app.py  docker-build.sh  hands-on.md  pyproject.toml
fsi-regulation/complete/: admin.py  app.py
fsi-regulation/utils/: bedrock_lib.py
tooluse/: response.sample.json
tooluse/utils/: tools.py
