[project]
name = "call-center"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]
